--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@ function Image(x) {x.style.width="64px"; x.style.height="64px";}
 <h1>Jonathan Rideout</h1>
 <h2>175594</h2>
 <p>When you are not hovering the mouse over the image, it is 64 pixels by 64 pixels. When the mouse is hovered over the image, it is 256 pixels by 256 pixels.</p>
-<h1 onmouseover="style.font-size='55px'" onmouseout="style.font-size='21px'">Hover over me</h1>
-
- </body>
+<p onmouseover="style.color='blue'" onmouseout="style.color='#444'">Hover over me</p>
+</body>
 </html>
