--- a/Validation.html
+++ b/Validation.html
@@ -12,7 +12,7 @@ function DataValidation() {
 <form name="FormName" onsubmit="return DataValidation()">
 Enter Information
 <input type="text" name="Input">
-<input type="submit" value="Enter">
+<input type="submit" value="Click!">
 </form>
 </body>
 </head>
